<resources>
    <string name="app_name">Android SQLite App</string>
    <string name="playername">playerName</string>
    <string name="position">position</string>
    <string name="todos">TODOS</string>
    <string name="player_name">Player Name</string>
    <string name="player_s_profile">PLAYER\'S PROFILE</string>
    <string name="todo">TODO</string>
    <string name="player_position">Player Position:</string>
</resources>
