<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/player_image" android:contentDescription="@string/todo"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/player_name"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/player_image"

                android:text="@string/playername" android:layout_toEndOf="@id/player_image"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/player_position"
                android:padding="10dp"
                android:text="@string/position"
                android:layout_alignBottom="@id/player_image"
                android:layout_alignStart="@id/player_name"
                android:layout_alignLeft="@id/player_image"

        />


    </RelativeLayout>

</android.support.v7.widget.CardView>