<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:targetApi="lollipop">

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
        <ImageView
                android:layout_height="275dp"
                android:layout_width="190dp"
                android:id="@+id/p_image"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"

                android:contentDescription="@string/todo"/>


        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/player_s_profile"
                android:id="@+id/p_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/p_name"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/player_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:autofillHints=""
                android:inputType=""/>

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/p_position"
                android:hint="@string/player_position"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:autofillHints="" android:inputType=""/>

        <LinearLayout
                android:layout_height="52dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal|end"
                android:orientation="horizontal"
                android:id="@+id/linear1"
                android:padding="8dp">

            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="Save"
                    android:id="@+id/save_btn"/>

            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="Retrieve"
                    android:id="@+id/retrieve_btn"/>

        </LinearLayout>



    </LinearLayout>









</android.support.v7.widget.CardView>